# taia-x

./: .dockerignore  .editorconfig  .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  test.json  vetur.config.js
.github/ISSUE_TEMPLATE/: epic.md  story.md  task.md
backend/: .env.template  Dockerfile  README.md  docker-compose.yml  docker-start.sh  requirements.txt
contracts/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
diagrams/: Smart_Contract.drawio  Untitled Diagram (2).drawio  dataset_merkle_tree.drawio  minting_process.drawio
dipdup/: .env.template  Dockerfile  dipdup.yml  docker-compose-m1.yml  docker-compose.yml  pyproject.toml  taia_x.sqlite3
dipdup/taia_x/: metadata_utils.py  models.py  utils.py
dipdup/taia_x/handlers/: on_buy.py  on_mint.py  on_update_cert.py  on_update_role.py
dipdup/taia_x/hooks/: on_reindex.py  on_rollback.py
dipdup/taia_x/types/taia_x_fa2/: storage.py
dipdup/taia_x/types/taia_x_fa2/parameter/: buy.py  mint.py  update_certs.py  update_user_roles.py
dummy-files/: README.md  init_merkle.py  location.py  main.py  sensordata.py  signature.py
frontend/: .editorconfig  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vue.config.js
ipfs/: README.md  docker-compose.yml  init.sh
provider/: Dockerfile  README.md  alembic.ini.template  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  test_main.py
tzkt/: docker-compose.yml
(+230 files in other folders)
