[tool.poetry]
name = "dipdup_taia-x"
version = "0.1.0"
description = ""
authors = ["Kevin Hertwig <hertwig@campus.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.9"
dipdup = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
